# Rust-V

./: .gitignore  .gitlab-ci.yml  .gitmodules  .tokeignore  Cargo.toml  README.md  SceneSyntax.md  bench.sh  job.sh  pgo.sh  rust-job.sh
benches/: refractive_index.rs
color/: Cargo.toml
color/src/: cie.rs  int_spectrum.rs  lib.rs  spectrum.rs  srgb.rs  xyz.rs
color/src/color_data/: mod.rs  spectral.rs  srgb.rs  xyz.rs
color/src/spectral_data/: blue.rs  blue_sky.rs  dark_skin.rs  foliage.rs  green.rs  light_skin.rs  mod.rs  red.rs  white.rs  yellow.rs
definitions/: Cargo.toml
definitions/src/: lib.rs
demos/: Cargo.toml
demos/src/: main.rs
demos/src/demo_scenes/: cornell.rs  debug.rs  mod.rs  prism.rs  spheres.rs
geometry/: Cargo.toml
geometry/src/: aabb.rs  bubble.rs  bvh.rs  bvh_sah.rs  composite.rs  cube.rs  cylinder.rs  debug_util.rs  disk.rs  legacy_mesh.rs  lenses.rs  lib.rs  mesh.rs  obj_file.rs  plane.rs  point.rs  ray.rs  sphere.rs
geometry/src/bvh/: bottom_up_bvh.rs  candidate.rs  item.rs  mod.rs  node.rs  plane.rs
scenes/: Cargo.toml  armadillo.ron  cornell.ron  cornell_diffuse.ron  cornell_lambertian.ron  cornell_oren_nayar.ron  dragon.ron  dragon_4.ron  glass-sphere.ron  glass.ron  prism.ron  prism_direct.ron
scenes/src/: lib.rs
src/: config.rs  configuration.rs  debug_utils.rs  grid.rs  lib.rs  light.rs  mc.rs  renderer.rs  scene.rs  sensor.rs  serialization.rs  window.rs
src/bxdf/: bsdf.rs  diffuse.rs  fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  refraction_index.rs  specular.rs  types.rs
src/camera/: mod.rs  perspective.rs  perspective_simone.rs
src/demo_scenes/: cornell.rs  debug.rs  debug_sphere.rs  mod.rs  spheres.rs
src/filters/: box_filter.rs  gaussian_filter.rs  lanczos_sinc_filter.rs  mitchell_filter.rs  mod.rs  triangle_filter.rs
src/integrator/: debug_normals.rs  hero.rs  mod.rs  path.rs  path_enhanced.rs  spectral_path.rs  spectral_path_single.rs  whitted.rs
src/integrators/: mod.rs
src/new/: config.rs  mod.rs  render_job.rs  renderer.rs  sensor.rs
src/new/sensor/: bounds.rs  mod.rs  pixel.rs  sensor.rs  sensor_tile.rs
src/objects/: emitter.rs  mod.rs  point.rs  receiver.rs  sphere.rs
src/objects/sampleables/: mod.rs  point.rs  sphere.rs
src/refractive_index/: air.rs  glass.rs  mod.rs  sapphire.rs  water.rs
src/sampler/: mod.rs  noop_sampler.rs  random_sampler.rs
src/sampler/pixel_samplers/: mod.rs  noop_sampler.rs  stratified_sampler.rs  super_sampling.rs
src/samplers/: mod.rs
src/samplers/camera/: mod.rs
src/samplers/spectral_samplers/: mod.rs
src/sensor/: bounds.rs  mod.rs  pixel.rs  sensor_tile.rs
utility/: Cargo.toml
utility/src/: floats.rs  lib.rs  math.rs
