[workspace]
members = [ "color", "demos", "geometry", "utility", "definitions" ]
default-members = [ "color", "demos", "geometry", "utility", "definitions" ]

[package]
name = "rust-v"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitmask flag generator
bitflags = ""
# Program argument parser
clap = { version = "", features = ["yaml"] }
# fast random types
fastrand = ""
# image loading / saving
image = ""
# progress bars etc.
indicatif = ""
# num of logical / physical cpus
num_cpus = ""
# live image of rendering
show-image = { version = "0.6.5", features = ["image", "save"], optional = true }
# linear algebra
#ultraviolet = { version = "", features= ["int", "serde"] }
ultraviolet = { path = "./ultraviolet", features= ["int", "serde"] }

# De-/Serialization
serde = { version = "", features = ["derive", "rc"] }
typetag = ""
ron = ""

color = { path = "./color" }
definitions = { path = "./definitions" }
geometry = { path = "./geometry" }
utility = { path = "./utility" }

[dev-dependencies]
criterion = ""

[[bench]]
name = "refractive_index"
harness = false

[features]
default = []
f64 = ["definitions/f64", "ultraviolet/f64", "color/f64", "geometry/f64", "utility/f64"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = true

[profile.dev]
incremental = true
