[workspace]
members = [ "color", "demos", "geometry", "utility", "definitions" ]
default-members = [ "color", "demos", "geometry", "utility", "definitions" ]

[package]
name = "rust-v"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitmask flag generator
bitflags = "1.2.1"
# Program argument parser
clap = { version = "2.33.3", features = ["yaml"] }
# fast random types
fastrand = "1.4.1"
# image loading / saving
image = "0.23.14"
# progress bars etc.
indicatif = "0.16.0"
# num of logical / physical cpus
num_cpus = "1.13.0"
# live image of rendering
show-image = { version = "0.8.4", features = ["image", "save"], optional = true }
# linear algebra
#ultraviolet = { version = "", features= ["int", "serde"] }
ultraviolet = { path = "./ultraviolet", features= ["int", "serde"] }

# De-/Serialization
serde = { version = "1.0.126", features = ["derive", "rc"] }
typetag = "0.1.7"
ron = "0.6.4"

color = { path = "./color" }
definitions = { path = "./definitions" }
geometry = { path = "./geometry" }
utility = { path = "./utility" }

[dev-dependencies]
criterion = ""

[[bench]]
name = "refractive_index"
harness = false

[features]
f64 = ["ultraviolet/f64", "color/f64", "definitions/f64", "geometry/f64", "utility/f64"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = true

[profile.dev]
incremental = true
