[package]
name = "color"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = ""
image = ""
serde = { version = "", features = ["derive"] }
serde_derive = ""
serde-big-array = ""

utility = { path = "../utility" }
