[package]
name = "color"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
serde = { version = "1.0.126", features = ["derive"] }
#serde_derive = "1.0.126"
serde-big-array = "0.3.2"

utility = { path = "../utility" }
definitions = { path = "../definitions" }

[features]
f64 = ["definitions/f64", "utility/f64"]
