[package]
name = "definitions"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = { git = "https://github.com/termhn/ultraviolet", branch = "main", features = ["int"] }

[features]
f64 = ["ultraviolet/f64"]