[package]
name = "demos"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color = { path = "../color" }
geometry = { path = "../geometry" }
#utility = { path = "../utility" }
rust-v = { path = "../" }
ultraviolet = { path = "../ultraviolet" }
fastrand = ""
ron = ""
definitions = { path = "../definitions" }

[features]
f64 = ["color/f64", "geometry/f64", "rust-v/f64", "ultraviolet/f64", "definitions/f64"]
