[package]
name = "geometry"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ultraviolet = { version = "", features = ["serde"] }
ultraviolet = { path = "../ultraviolet", features= ["serde"] }
# de-/serialization
serde = { version = "", features = ["derive"] }
typetag = ""

definitions = { path = "../definitions" }

utility = { path = "../utility" }

[features]
default = ["watertight-mesh"]
watertight-mesh = []
f64 = ["ultraviolet/f64", "definitions/f64", "utility/f64"]