[package]
name = "geometry"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = { version = "0.8.1", features= ["serde"] }
# de-/serialization
serde = { version = "1.0.126", features = ["derive"] }
typetag = "0.1.7"

utility = { path = "../utility" }

[features]
default = ["watertight-mesh"]
watertight-mesh = []
f64 = ["ultraviolet/f64", "utility/f64"]