[package]
name = "scenes"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = ""
geometry = { path = "../geometry" }
rust-v = { path = "../" }
